# Proyecto_PAE2020

./: CMakeLists.txt  README.md  main.c  main.h  plot_movement.bat  plot_movement.py  posicion.c  posicion.h
dyn/: dyn_app_common.c  dyn_app_common.h  dyn_app_motor.c  dyn_app_motor.h  dyn_app_real_motor.c  dyn_app_real_motor.cpp  dyn_app_sensor.c  dyn_app_sensor.h  dyn_frames.c  dyn_frames.h  dyn_instr.c  dyn_instr.h
dyn_test/: b_queue.c  b_queue.h  dyn_emu.c  dyn_emu.h  movement_simulator.c  movement_simulator.h
hal_dyn_uart/: fake_msp.h  hal_dyn_uart_emu.c  hal_dyn_uart_emu.h
joystick_emu/: joystick.c  joystick.h
